--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   bloc: ^6.0.3
   cached_network_image: ^2.3.2+1
   flutter_staggered_animations: ^0.1.2
+  expandable: ^4.1.4
+  flutter_animated_theme: ^0.9.0
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
