--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/vision": "^2.1.2",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
