--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_storage: ^3.1.6
   cloud_firestore: ^0.13.7
   cloud_functions: ^0.5.0
+  firebase_ml_vision: ^0.9.6+2
   google_fonts: ^1.1.0
   path_provider: "1.6.14"
   googleapis: any
